ci/tanzu/acceptance/gofnol-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: gofnol-blue
  name: gofnol-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      service: gofnol-blue
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/default: "true"
        service: gofnol-blue
        solera-vertical: rms
        solera-env: dev
        solera-org: a2e
        solera-ingress: enabled
        solera-dev-support: DL-VehicleClaims-NA-Eng-Squad-TeamLightning
        solera-qa-support: DL-NA-QA-Leads
    spec:
      containers:
        - env:
            - name: NEW_RELIC_APP_NAME
              value: gofnol-acceptance
            - name: NEW_RELIC_LABELS
              value: Environment:DEV;Vertical:RMS Solutions;Theme:Insurance PL Claims;Product:GOFNOL
            - name: NEW_RELIC_LICENSE_KEY
              value: e575f6ebb7f8821308cbea10b3817a8bcbe0NRAL
            - name: CORECLR_ENABLE_PROFILING
              value: "1"
            - name: CORECLR_NEWRELIC_HOME
              value: /app/newrelic-netcore20-agent
            - name: CORECLR_PROFILER_PATH
              value: /app/newrelic-netcore20-agent/libNewRelicProfiler.so
            - name: CORECLR_PROFILER
              value: "{36032161-FFC0-4B61-B559-F6C5D41BAE5A}"
            - name: VCAP_SERVICES
              valueFrom:
                secretKeyRef:
                  name: vcap-gofnol
                  key: vcap
          image: feeds.axadmin.net/docker/rms/automated_appraisal_engine/gofnol:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 60
            periodSeconds: 60
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 10
          name: gofnol-blue
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 50Mi
              cpu: 10m
            limits:
              memory: 75Mi
              cpu: 15m
      restartPolicy: Always
      serviceAccountName: default
status: {}
