ci/tanzu/acceptance/gofnol-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: gofnol-blue
  name: gofnol-blue
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    service: gofnol-blue
  type: ClusterIP
status:
  loadBalancer: {}
