ci/tanzu/acceptance/gofnol-blue-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gofnol-blue
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: gofnol-acceptance.tkg-rms-dev.usdc01.solera.farm
      http:
        paths:
          - backend:
              service:
                name: gofnol-blue
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
